removed bullet pts from definitions for format purposes

--- a/requirements_document.tex
+++ b/requirements_document.tex
@@ -51,28 +51,27 @@ The benefits that the software will have on the STEM Academy are that they will 
  Another benefit that the software will have on the STEM Academy is that student survey responses and survey questions will be stored in a secure database instead of a paper filing system and their personal information will be encrypted to maintain its confidentiality from outside users. 
 
 \subsection{Definitions}
-\begin{itemize}
-\item Administration - the individuals who would be generating and/or accessing survey data.
-\item Contract - A legally binding document that is agreed upon by the customer and developers.  
-\item Customer - The person, or persons, who will be receiving the final product and provide feedback to the developers, so that they can meet the requirements for their desired product. 
-\item Data analyst - A user that uses the product to generate a report based on survey response data.
-\item Database - A collection of information that is organized, so that it can be easy to modify and find information. 
-\item Developers - A group of people who will build a software product for a customer.
-\item Matrix question - A multi-part question where each part is a row that has several options for response. All parts have the
-same answer choices.
-\item Multiple choice question - A question where the response is a selection from different options, and one or many selections
-are possible.
-\item Query - A request for information from the database based on user requirements.
-\item Question - A textual area on a survey which has a prompt and an answer.
-\item Question type - Question structure can vary based on the kind of response desired (multiple choice, text entry, matrix). 
-\item Survey builder - A user that creates surveys on the database.
-\item Survey taker - A user that provides answers to surveys existing on the database. These responses are stored in
-the database.
-\item Template question - A question that follows a general structure. This can be edited to change some wording that can
-vary between surveys (such as the material taught) while the general structure stays the same.
-\item Text entry question - A question where the response is a box that allows the user to answer with a string of text.
-\item User - A person that will be interacting and using the product.
-\end{itemize}
+\noindent Administration - the individuals who would be generating and/or accessing survey data. \\
+Contract - A legally binding document that is agreed upon by the customer and developers.  \\
+Customer - The person, or persons, who will be receiving the final product and provide feedback to the developers, so that they can meet the requirements for their desired product. \\
+Data analyst - A user that uses the product to generate a report based on survey response data. \\
+Database - A collection of information that is organized, so that it can be easy to modify and find information. \\
+Developers - A group of people who will build a software product for a customer. \\
+Matrix question - A multi-part question where each part is a row that has several options for response. All parts have the
+same answer choices.\\
+Multiple choice question - A question where the response is a selection from different options, and one or many selections
+are possible.\\
+Query - A request for information from the database based on user requirements.\\
+Question - A textual area on a survey which has a prompt and an answer.\\
+Question type - Question structure can vary based on the kind of response desired (multiple choice, text entry, matrix). \\
+Survey builder - A user that creates surveys on the database.\\
+Survey taker - A user that provides answers to surveys existing on the database. These responses are stored in
+the database.\\
+Template question - A question that follows a general structure. This can be edited to change some wording that can
+vary between surveys (such as the material taught) while the general structure stays the same.\\
+Text entry question - A question where the response is a box that allows the user to answer with a string of text.\\
+User - A person that will be interacting and using the product.
+
 \subsection{References}
 % Do we have any outside information in this that must be cited? I haven't seen any. -Kyle.
 \subsection{Overview}
