Added the abstract

--- a/requirements_document.tex
+++ b/requirements_document.tex
@@ -31,6 +31,15 @@
 
 \maketitle
 \newpage
+
+\section{Abstract}
+The STEM Academy Data Solution is a product proposed to the clients, STEM Academy, as a solution to their need for an efficient way of collecting survey data and reporting summary information.
+The software requirements specification is written to lay out what STEM Academy requires of the developers in providing a product to accomplish their needs.
+It explains what the product does and any information necessary to understanding the project and its scope.
+It also discusses the requirements themselves, from the user interface to generate surveys and report summary data to the database storing survey response data.
+Lastly, it clarifies performance requirements to ensure that the product functions within reasonable expectations for the clients.
+
+\newpage
 \section{Introduction}
 \subsection{Purpose}
 This software requirements specification is intended to define the requirements of the project of developing a database 
