--- a/kyle_tech_review.tex
+++ b/kyle_tech_review.tex
@@ -1,14 +1,54 @@
-\documentclass{IEEEtran}
+\documentclass[letterpaper,10pt,serif, draftclsnofoot,onecolumn, compsoc, titlepage]{IEEEtran}
+
+\usepackage{graphicx}
+\usepackage{amssymb}
+\usepackage{amsmath}
+\usepackage{amsthm}
+
+\usepackage{alltt}
+\usepackage{float}
+\usepackage{color}
+\usepackage{url}
+
+\usepackage{balance}
+\usepackage[TABBOTCAP, tight]{subfigure}
+\usepackage{enumitem}
+\usepackage{pstricks, pst-node}
+
+\usepackage{geometry}
+\geometry{margin=.75in}
+
+\usepackage{hyperref}
+%credit to http://tex.stackexchange.com/questions/48152/dynamic-signature-date-line
+\newcommand*{\SignatureAndDate}[1]{%
+    \par\noindent\makebox[2.5in]{\hrulefill} \hfill\makebox[2.0in]{\hrulefill}%
+    \par\noindent\makebox[2.5in][l]{#1}      \hfill\makebox[2.0in][l]{Date}%
+}%
+
+\title{CS461- Technology Review}
+\author{Kyle Nichols \\ STEM Academy Data Solution \\ Fall 2016}
 
 \begin{document}
+
+\maketitle
+\section{Abstract}
+The STEM Academy Data Solution will manage a database of survey questions.
+Its purpose is to automate the process of aggregating survey data and generating reports on this data.
+For this technology review, we looked at three alternative technologies for each of our subcomponents: set up and storage of an online database, automated distribution of online surveys, and printing of surveys.
+We analyzed these alternatives and came to a decision on which technology we would use for each.
+
+\newpage
 
 \section{Setting up and storing the database}
 For the database, we need to be able to set up the database (including the tables, relationships, etc.) and store it at a location accessible to our clients.
 \subsection{Microsoft Access}
 Microsoft Office contains Microsoft Access as a tool for creating custom SQL databases accessible from a browser \cite{access}.
-The advantage of using Microsoft Office software is that for anyone with an Oregon State email has access to the Microsoft Office suite, which includes our clients \cite{microsoftsoftware}.
-Access also utilizes SharePoint to allow for sharing of database among multiple users and database permissions \cite{access}.
-This would be really useful, as our clients can share access and permissions among any employees of STEM Academy that would need it, and since we, the developers, will likely also need access and permissions while developing the project, we can use our own Oregon State email accounts for access.
+It stores those databases on its own Microsoft Azure SQL Database service \cite{access}.
+The advantage of using Microsoft Office software is that anyone with an Oregon State email has access to the Microsoft Office suite, which includes our clients \cite{microsoftsoftware}.
+Microsoft Access, in particular, can be installed on institutional computers by contacting the department's computer administrator, though there may still be a cost involved in this as well \cite{microsoftsoftware}.
+This is also on institutional computers only, which limits the access we have to Microsoft Access for developing the database.
+Microsoft Access also utilizes SharePoint to allow for sharing of database among multiple users and database permissions \cite{access}.
+This would be really useful, as our clients can share access and permissions among any employees of STEM Academy that would need it, and since we will likely also need access and permissions while developing the project, we can use our own Oregon State email accounts for access.
 % Need to check with Information Services or the department IT for STEM Academy about cost and server (though I'm pretty sure it's Microsoft Azure SQL Database, which comes with Access
 \subsection{phpMyAdmin}
 phpMyAdmin is a free tool written in PHP for accessing MySQL databases, specifically over the web \cite{phpmyadmin}.
@@ -18,12 +58,13 @@ phpMyAdmin is also very well documented, which makes for ease of development \ci
 Another strong advantage is that phpMyAdmin is free, cutting costs for our client, though a separate web server will also be necessary.
 \subsection{MongoDB}
 MongoDB is an open-source document-oriented database software built on NoSQL \cite{mongodb}.
-Like phpMyAdmin, MongoDB is free, which reduces or eliminates the cost for our clients to uphold the database.
 MongoDB is also document-oriented, which means that it organizes and manages data as documents \cite{docdb}.
 This type of structure and orientation fits well with the storing of surveys, which are inherently documents, however, this does not work for storing data on students and their responses, which may require a more traditional relational database system to connect the students with their survey responses.
+As open source software, using the bare bones software for MongoDB is free of cost, which reduces or eliminates the cost for our clients to uphold the database. \cite{mongo_cost}.
+However, this is for the bare bones software, and if there are additional features needed by our clients that MongoDB provides, that will require additional cost \cite{mongo_cost}.
 
 \section{Distribution of surveys}
-Surveys must be distributable in URLs or other formats so that survey takers can easily access the survey from their own computer.
+Surveys must be distributable in URLs or other formats so that survey takers can easily access the survey from their own computer. The most useful format would be through email.
 \subsection{PHP mail}
 This is the built-in mail functionality for PHP \cite{php_mail}.
 The \texttt{mail()} function covers all of the basic requirents of sending an email (sender, destination, message, additional headers such as CC information) \cite{php_mail}.
@@ -64,15 +105,22 @@ It can even control multiple web pages at once \cite{css}.
 Although CSS can be useful in the general development of our web service, it can also be used for formatting and displaying a web page.
 This is because HTML only describes content \cite{css}.
 Since we will likely be using HTML or PHP to display content, CSS will probably be necessary to not only make our web pages user friendly in appearance, but also to ensure that they are formatted in a way that pages are easily printable.
+Although we may primarily use a different, defined method for printing pages, we may also use CSS in conjunction to format our pages so they look clean and formatted for printing.
 \subsection{css2pdf} % This is a JQuery library solution for printing to PDF
 This is a Javascript library intended to be plugged-in to a website for creating a print button on a web page that produces a PDF as embedded or downloadable (though some features are only supported by certain browsers) \cite{css2pdf}.
 The format of the generated PDF can be set and any HTML or CSS stylings are applied to the printed selections \cite{css2pdf}.
-This allowsd us to use generate a button on the page without creating the code to do so from scratch and applying it to a built-in function, like \texttt{window.print()} above.
+This allows us to generate a button on the page without creating the code to do so from scratch and applying it to a built-in function, like \texttt{window.print()} above.
 It supports several HTML elements such as different block elements, tables, and lists \cite{css2pdf_home}.
 It is also in process and being improved and will likely add more features and capabilities in the future, though this may not be useful as we will most likely finish developing this project at the end of the year.
 
 \section{Decision}
-
+Whichever software we use for the database setup and storage will need to depend on what cost Microsoft Access would have for STEM Academy.
+If the cost is manageable for STEM Academy, we could use Microsoft Access.
+However, if it is not, we may decide on phpMyAdmin.
+Although it would require accessing a web server that can be hosted on Oregon State's infrastructure (which is done in database classes), it is free software that can accomplish what we need without any worries of cost.
+For distributing the surveys, our best solution will probably be PHPMailer.
+It provides the functionality of the built-in \texttt{mail()} function, but with extra options that could be useful for us, including not requiring a separate web server.
+For printing surveys, the css2pdf library looks like a more rounded option than the default \texttt{print()} function without having to do some extra work on our part (such as creating our own print button).
 
 \begin{thebibliography}{99} % Lower this when done
 
@@ -89,7 +137,10 @@ It is also in process and being improved and will likely add more features and c
 `MongoDB for GIANT Ideas | MongoDB.' [Online]. Available: https://www.mongodb.com/. [Accessed: Nov 13, 2016].
 
 \bibitem{docdb}
-Lijin Joseji, `11 OPEN NoQL Document Oriented Databases,' July 23, 2012. [Online]. Available: https://dzone.com/articles/11-open-nosql-document. [Accessed: Nov 13, 2016.]
+Lijin Joseji, `11 OPEN NoQL Document Oriented Databases,' July 23, 2012. [Online]. Available: https://dzone.com/articles/11-open-nosql-document. [Accessed: Nov 13, 2016].
+
+\bibitem{mongo_cost}
+`MongoDB Cost Breakdown,' Dec 15, 2011. [Online]. Available: https://www.compose.com/articles/mongodb-cost-breakdown/. [Access: Nov 13, 2016].
 
 \bibitem{php_mail}
 'PHP: mail - Manual.' [Online]. Available: http://php.net/manual/en/function.mail.php. [Accessed: Nov 13, 2016].
