Fixed title- it was for OS II

--- a/JavierTechReview.tex
+++ b/JavierTechReview.tex
@@ -1,11 +1,11 @@
 \documentclass[12pt, draftclsnofoot, onecolumn]{IEEEtran}
 \usepackage[letterpaper, margin=0.75in]{geometry}
 \begin{document}
-	\title{Writing Topic 2: I/O and Provided Functionality}
+	\title{Technology Review}
 	\author{
 		Javier Franco \\
 		\endgraf
-		CS444 Fall 2016
+		CS461 Fall 2016
 	}
 	\maketitle
 	
