--- a/final_tech_review.tex
+++ b/final_tech_review.tex
@@ -26,6 +26,10 @@
 
 \maketitle
 \begin{abstract}
+The STEM Academy Data Solution will manage a database of survey questions.
+Its purpose is to automate the process of aggregating survey data and generating reports on this data.
+For this technology review, split our product into subcomponents and compared three different alternatives for those subcomponents.
+We analyzed these alternatives and came to a decision on which technology we would use for each.
 \end{abstract}
 \newpage
 \section{Introduction}
@@ -41,7 +45,7 @@ data would no longer be controlled by the STEM Academy and would be soley relian
 many features which the STEM Academy does not require, making the software unmanageable for the STEM Academy. 
 The STEM Academy needs a solution which will allow them to maintain control of their data and meet their specific needs without
 additional fluff. As the STEM Academy is largely nontechnical, the software needs to be incredibly simple to use and require no 
-maintainence upon delivery. The following report will examine the techonologies which can be used to construct the solution. Shannon Ernst authored Section 2: Survey Generation. Kyle Nichols authored Section 3: Database Management, Section 4: Survey Distribution, Section 5: Printable Surveys and Section 6: Decision on Database Management, Survey Distribution and Printable Surveys. Javier Franco authored section 7: Search Form, section 8: Printing a Report, and section 9: Saving Report Results. 
+maintainence upon delivery. The following report will examine the techonologies which can be used to construct the solution. Shannon Ernst authored Section 2: Survey Generation. Kyle Nichols authored Section 3: Database Management, Section 4: Survey Distribution, Section 5: Printable Surveys and Section 6: Decision on Database Management, Survey Distribution and Printable Surveys. Javier Franco authored Section 7: Search Form, Section 8: Printing a Report, and Section 9: Saving Report Results. 
 \section{Survey Generation}
 In generating surveys, the user should be able to add/remove questions, adjust their ordering at any time, and control how 
 and when they are displayed. There are a multitude of ways to accomplish this and the results are as follows. 
